@@ -6,6 +6,7 @@
 v.0.9.3
 =================
 + - the checking was added: does file from "recent used files" list exist still.
++ - "Scroll by tap zones" and "Move by stylus" commands where added.
 
 v.0.9.2
 =================
